# TreePractice

./: .gitignore  AVLTree.c  AVLTree.h  BinaryLinkedList.c  BinaryLinkedList.h  BinarySearchTree.c  BinarySearchTree.h  CMakeLists.txt  ChildAndSibling.c  ChildAndSibling.h  HuffmanTree.c  HuffmanTree.h  NonRecursiveTraversal.c  NonRecursiveTraversal.h  Parent.c  Parent.h  ParentAndChild.c  ParentAndChild.h  README.md  RedBlackTree.c  RedBlackTree.h  SplayTree.c  SplayTree.h  SuffixTree.c  SuffixTree.h  ThreadBinaryTree.c  ThreadBinaryTree.h
